--- a/src/styles/modules/_display-data.scss
+++ b/src/styles/modules/_display-data.scss
@@ -1,20 +1,22 @@
 
 .display-data {
   display: flex;
-  width: 90%;
   flex-flow: column nowrap;
-  height: 100%;
+  align-items: center;
 }
 
 .weather-box {
   display: flex;
-  flex-flow: column wrap;
+  justify-content: center;
+  flex-flow: row wrap;
   width: 100%;
   height: 100%;
 }
 
 .data-container {
-  width: 50%;
+  margin: 2px 2px;
+  width: 150px;
+  min-height: 150px;
   display: flex;
   justify-content: center;
   flex-flow: column nowrap;
