Add header component Add folder for images Add image for header and footer

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,8 @@
 @import "./modules/_main";
 @import "./modules/weather-search";
 @import "./modules/display-data";
+@import "./modules/header";
+@import "./modules/content";
 
 
 * {
