--- a/src/styles/modules/_weather-search.scss
+++ b/src/styles/modules/_weather-search.scss
@@ -1,13 +1,16 @@
 .weather-search {
+    width: 100%;
+    background-color: red;
+    display: flex;
+    justify-content: center;
+    height: auto;
+    padding: 10px;
 
   &__form {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-
     text-align: center;
-    margin-top: 3rem;
-    margin-bottom: 5rem;
   }
 
   &__input {
