--- a/src/styles/modules/_main.scss
+++ b/src/styles/modules/_main.scss
@@ -1,7 +1,7 @@
 .main {
-  height: 100%;
+  box-shadow: 10px 0px 0px 0px black;
+  height: 80%;
   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-  width: 100%;
   margin: 0 auto;
   position: absolute;
   top: 50%;
@@ -9,4 +9,12 @@
   transform: translate(-50%, -50%);
   border-radius: 3px;
   overflow: hidden;
+}
+
+
+@media only screen and (max-width: 600px) {
+  .main {
+    height: 100%;
+    width: 100%;
+  }
 }
