--- a/src/styles/modules/_display-data.scss
+++ b/src/styles/modules/_display-data.scss
@@ -7,19 +7,56 @@
 
 .weather-box {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-flow: row wrap;
   width: 100%;
   height: 100%;
 }
 
 .data-container {
+  font-size: 1.5rem;
+  color: darkred;  
   margin: 2px 2px;
-  width: 150px;
+  width: 130px;
   min-height: 150px;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   flex-flow: column nowrap;
   text-align: center;
-  background-color: red;
+  background-color: white;
+}
+
+.head-para {
+  font-weight: bold;;
+}
+
+.value-para {
+  font-style: italic;
+}
+
+.prognos-header {
+  display: block;
+}
+
+.prognos-text {
+  display: inline-block;
+}
+
+.weather-icon {
+  float: right;
+}
+
+.summary {
+  min-width: 300px;
+  max-width: 800px;
+  width: 100%;
+  
+}
+
+@media screen and (min-width: 350px) {
+  .data-container {
+    background-color: blue($color: #000000);
+  }
+
+
 }
