--- a/src/styles/modules/_main.scss
+++ b/src/styles/modules/_main.scss
@@ -1,20 +1,21 @@
 .main {
-  box-shadow: 10px 0px 0px 0px black;
-  height: 80%;
-  box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-  margin: 0 auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 3px;
-  overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
 
 
-@media only screen and (max-width: 600px) {
+@media screen and (min-width: 1200px) {
   .main {
-    height: 100%;
-    width: 100%;
+    box-shadow: 10px 0px 0px 0px black;
+    height: 80%;
+    width: 40%;
+    box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+    margin: 0 auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 3px;
+    overflow: hidden;
   }
 }
