--- a/src/styles/modules/_display-data.scss
+++ b/src/styles/modules/_display-data.scss
@@ -48,7 +48,7 @@
 
 .summary {
   min-width: 300px;
-  max-width: 800px;
+  max-width: 600px;
   width: 100%;
   
 }
@@ -56,6 +56,10 @@
 @media screen and (min-width: 350px) {
   .data-container {
     background-color: blue($color: #000000);
+  }
+
+  .summary {
+    width: 600px;
   }
 
 
