--- a/src/styles/modules/_weather-search.scss
+++ b/src/styles/modules/_weather-search.scss
@@ -1,9 +1,10 @@
 .weather-search {
     width: 100%;
-    background-color: red;
+    background-color: white;
     display: flex;
     justify-content: center;
     height: auto;
+    margin-bottom: 20px;
 
   &__form {
     display: flex;
