--- a/src/styles/modules/_content.scss
+++ b/src/styles/modules/_content.scss
@@ -1,10 +1,13 @@
 .content {
   background-color: white;
+  padding: 20px;
   height: 100%;
   width: 100%;
+  overflow: scroll;
 }
 
 
 ul {
   list-style-type: none;
 }
+
