--- a/src/styles/modules/_wrapper.scss
+++ b/src/styles/modules/_wrapper.scss
@@ -8,11 +8,11 @@
 
   height: 100%;
 
-  max-width: 960px;
+  //max-width: 960px;
 
-  padding-left: 10px;
+  //padding-left: 10px;
 
-  padding-right: 10px;
+  //padding-right: 10px;
 
   margin-left: auto;
 
