--- a/src/styles/modules/_main.scss
+++ b/src/styles/modules/_main.scss
@@ -6,11 +6,9 @@
 
 @media screen and (min-width: 500px) {
   .main {
-    box-shadow: 10px 0px 0px 0px black;
     height: 90%;
-    width: 80%;
-    box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
-    margin: 0 auto;
+    max-width: 1100px;
+    box-shadow: 5px 30px 40px -13px rgba(0,0,0,0.75);
     position: absolute;
     top: 50%;
     left: 50%;
