--- a/src/styles/modules/_weather-search.scss
+++ b/src/styles/modules/_weather-search.scss
@@ -1,5 +1,6 @@
 .weather-search {
     width: 100%;
+    max-width: 900px;
     background-color: white;
     display: flex;
     justify-content: center;
@@ -7,7 +8,6 @@
     margin-bottom: 20px;
 
   &__form {
-    flex-grow: 2;
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
@@ -15,7 +15,7 @@
   }
   
   &__input {
-    min-width: 300px;
+    flex-grow: 1;
     background-color: rgba($color: #f7f4e4, $alpha: 0.5);
     border: solid 2px transparent;
     padding: 1.5rem;
@@ -39,17 +39,13 @@
   }
 
   &__checkboxes {
-    display: inline-block;
-    max-width: 20px;
+    width: 90%;
     display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
+    align-items: center;
+    font-size: 0.5em;
+    letter-spacing: .2em;
+    background-color: rgba($color: white, $alpha: 0.5);
     padding: 3px;
-  }
-
-
-  &__form-gather {
-    flex-grow: 1;
   }
 
 
