--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -2,7 +2,7 @@
 .header {
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   display: block;
-  height: 70px;
+  min-height: 200px;
   width: 100%;
   position: relative;
   font-weight: 900;
@@ -14,19 +14,23 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
+    min-height: 200px;
     width: 100%;
     margin: auto;
   }
 
   &__text {
     position: absolute;
-    left: 5%;
-    bottom: 10%;
+    left: 15%;
+    bottom: 30%;
     color: whitesmoke;
+    font-size: 2rem;
     text-shadow: 1px 1px rgba($color: #000000, $alpha: 0.7);
   }
 
-
+  &__text > p {
+    font-size: 1.5rem;
+  }
 
   @media only screen and (max-width: 600px) {
     &__background {
@@ -36,4 +40,20 @@
 
 
 
+}
+
+/* Dark effect on image */
+.darken {
+  position: relative;
+}
+
+.darken:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.6);
 }
