--- a/src/styles/modules/_content.scss
+++ b/src/styles/modules/_content.scss
@@ -1,11 +1,11 @@
 .content {
   align-self: center;
   height: 100%;
-  min-height: 400px;
   width: 70%;
   align-items: center;
   display: flex;
   flex-flow: column nowrap;
+  padding-bottom: 100px;
 }
 
 
