--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -2,10 +2,45 @@
 .header {
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
   display: block;
-  min-height: 200px;
+  height: 200px;
   width: 100%;
   position: relative;
   font-weight: 900;
+  
+  &__top {
+    position: fixed;
+    top: 0px;
+    display: flex;
+    justify-content: space-around;
+    padding: 10px;
+    background-color: black;
+    width: 100%;
+    min-height: 20px;
+    z-index: 4;
+  }
+  
+  &__warning {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    color: rgba($color: white, $alpha: 0.8);
+  }
+  
+  &__X {
+    all: unset;
+    height: 100%;
+    min-width: 30px;
+    color: rgba($color: white, $alpha: 0.5);
+    align-self: flex-end;
+    justify-content: center;
+    font-size: 1.5rem;
+    display: flex;
+  }
+  
+  &__image-container {
+    width: 100%;
+    height: 200px;
+  }
   
   
   &__background {
@@ -14,11 +49,10 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
-    min-height: 200px;
     width: 100%;
     margin: auto;
   }
-
+  
   &__text {
     position: absolute;
     left: 15%;
@@ -27,17 +61,22 @@
     font-size: 2rem;
     text-shadow: 1px 1px rgba($color: #000000, $alpha: 0.7);
   }
-
-  &__text > p {
-    font-size: 1.5rem;
-  }
-
+  
   @media only screen and (max-width: 600px) {
+    
+    .header {
+      min-height: 100px;
+    }
+    
     &__background {
       width: 100%;
     }
+    
+    &__text {
+      bottom: 10%;
+      font-size: 1.5rem;
+    }
   }
-
 
 
 }
