--- a/src/styles/modules/_weather-search.scss
+++ b/src/styles/modules/_weather-search.scss
@@ -1,3 +1,14 @@
+.geo-image {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-image: url("../../media/geoleo.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 30px;
+  width: 30px;
+}
 
 .weather-search {
   box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -8,6 +19,25 @@
   height: auto;
   margin-top: 20px;
   margin-bottom: 20px;
+
+    &__geo-container {
+      flex-flow: row nowrap;
+      display: flex;
+      width: 100%;
+    }
+
+
+    &__inner-geo-container {
+      font-weight: bold;
+      flex-flow: row nowrap;
+      display: flex;
+      align-items: center;
+      min-height  : 30px;
+    }
+
+    &__inner-geo-container:hover {
+      cursor: pointer;
+    }
   
     &__form {
       width: 100%;
@@ -49,17 +79,20 @@
     display: flex;
   }
   
-  &__checkboxes {
+  &__bottom-info-bar {
     width: 100%;
+    min-height: 30px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: space-between;
     background-color: rgba($color: #f7f4e4, $alpha: 0.5);
-    padding: 10px;
     margin-top: 1px;   
   }
   
   &__checkbox {
+    display: flex;
+    min-height: 21px;
+    align-items: center;
     padding: 1.5rem;
     margin-left: 8px;
     margin-right: 3px;
@@ -83,7 +116,46 @@
       outline: none;
     }
   }
+
+  &__geo-location {
+    height: 100%;
+    padding-left: 5px;
+    display: flex;
+    font-weight: bold;
+    align-items: center;
+  }
+
+  &__checkbox-container {
+    padding-left: 5px;
+    display: flex;
+    width: 100%;
+  }
+
+
+
 }
+
+
+
+
+
+
+
+.hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.4s, opacity 0.4s ease-out;
+}
+
+.visible {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 1s ease-in;
+}
+
+
+
+
 
 
 
@@ -91,6 +163,22 @@
   .weather-search {
     margin-top: 0px;
     width: 100%;
+
+    &__checkboxes {
+      flex-flow: column nowrap;
+      justify-content: center;
+    }
+
+    &__geo-location {
+      padding-top: 5px;
+      justify-content: center;
+      display: flex;
+    }
+    
+    &__checkbox-container {
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
     
     &__form-gather {
       width: 100%;
