--- a/src/styles/modules/_display-data.scss
+++ b/src/styles/modules/_display-data.scss
@@ -94,3 +94,15 @@
   background-color: rgba($color: #f7f4e4, $alpha: 0.5);
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05);
 }
+
+@media (max-width: 900px) {
+  .display-data {
+    font-size: 3vw;
+  }
+}
+
+@media (max-width: 600px) {
+  .display-data {
+    font-size: 5vw;
+  }
+}
