--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,4 +1,3 @@
-@import "./modules/_wrapper";
 @import "./modules/_main";
 @import "./modules/weather-search";
 @import "./modules/display-data";
@@ -6,12 +5,11 @@
 @import "./modules/content";
 @import "./modules/footer";
 
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: "Ubuntu", sans-serif;
 }
 
 .App {
@@ -19,8 +17,10 @@
   height: 100%;
 }
 
-html, body, #root, .App{
+html,
+body,
+#root,
+.App {
   height: 100%;
   width: 100%;
-  background-color: #FEFADC;
 }
