--- a/src/styles/modules/_main.scss
+++ b/src/styles/modules/_main.scss
@@ -1,11 +1,10 @@
 .main {
-  height: 100%;
+  height: auto;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
+  background-color: #fefadc;
 }
 
-
 @media screen and (min-width: 500px) {
-
 }
