--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -15,12 +15,14 @@
 .App {
   text-align: center;
   height: 100%;
+  background-color: #fefadc;
 }
 
 html,
 body,
 #root,
 .App {
-  height: 100%;
   width: 100%;
+  height: 100%;
+  background-color: #fefadc;
 }
