--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -1,12 +1,12 @@
-
 .header {
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
   display: block;
   height: 200px;
   width: 100%;
   position: relative;
   font-weight: 900;
-  
+
   &__top {
     position: fixed;
     top: 0px;
@@ -18,14 +18,14 @@
     min-height: 20px;
     z-index: 4;
   }
-  
+
   &__warning {
     display: flex;
     justify-content: center;
     align-self: center;
     color: rgba($color: white, $alpha: 0.8);
   }
-  
+
   &__X {
     all: unset;
     height: 100%;
@@ -36,13 +36,12 @@
     font-size: 1.5rem;
     display: flex;
   }
-  
+
   &__image-container {
     width: 100%;
     height: 200px;
   }
-  
-  
+
   &__background {
     background-image: url("../../media/header.jpg");
     background-position: center;
@@ -52,33 +51,29 @@
     width: 100%;
     margin: auto;
   }
-  
+
   &__text {
     position: absolute;
     left: 15%;
     bottom: 20%;
     color: whitesmoke;
-    font-size: 2rem;
     text-shadow: 1px 1px rgba($color: #000000, $alpha: 0.7);
   }
-  
+
   @media only screen and (max-width: 600px) {
-    
     .header {
       min-height: 100px;
     }
-    
+
     &__background {
       width: 100%;
     }
-    
+
     &__text {
       bottom: 10%;
       font-size: 1.5rem;
     }
   }
-
-
 }
 
 /* Dark effect on image */
